@@ -1,3 +1,4 @@
+* Allow copying Python instances of Model
 * Add all buttons to default form view
 * Unify PYSON string format
 * Forbid all white spaces except space in Char field
